--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -24,7 +24,7 @@
     line-height: 30px;
 }
 
-.about__card p{
+.about__card{
     font-weight: 500;
     font-size: 16px;
 }
@@ -132,11 +132,11 @@ ul li p{
         height: 280px;
         padding: 15px;
         line-height: 22px;
-        font-size: 14px;
+        font-size: 13px;
     }
 
     .about__card .button__about{
-        margin-top: 5px;
+        margin-top: 25px;
         padding: 5px 15px;
         font-size: 13px;
     }
