--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -57,19 +57,50 @@
 }
 
 @media screen and (max-width: 576px){
+    .hero__text{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 100%;
+    }
+
     .hero__text h3{
-        font-size: 10px;
+        font-size: 14px;
+        font-weight: 500;
     }
+    
     .hero__text h1{
-        font-size: 16px;
+        font-size: 20px;
     }
+    
     .hero__text h1::after{
         content: '';
         position: absolute;
-        bottom: -15px;
-        left: 0;
-        width: 15%;
+        bottom: -25px;
+        width: 45%;
+        left: 27.5%; /* Adjust this value to center the line under the h1 */
         height: 3px;
         background-color: var(--secondary-color);
+    }
+}
+
+.hero__img{
+    width: 100%;
+    height: 700px;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 1200px){
+    .hero__img{
+        height: 500px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .hero__img{
+        height: 400px;
+        object-position: center;
     }
 }
