[section] add our team section

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,19 +1,15 @@
-.about{
-    height: 75vh;
+.about {
     background-image: url('../assets/images/background/bg_about.png');
     background-size: cover;
-    background-repeat: no-repeat;   
+    background-repeat: no-repeat;
+    padding: 155px 0;
 }
 
-.about__content{
-    padding-top: 78px;
-}
-
-.about__header h1:last-child{
+.about__header h1:last-child {
     font-weight: 700;
 }
 
-.about__card{
+.about__card {
     background-color: var(--secondary-color);
     box-shadow: rgba(0, 0, 0, 0.25);
     width: 358px;
@@ -23,12 +19,12 @@
     line-height: 30px;
 }
 
-.about__card{
+.about__card {
     font-weight: 500;
     font-size: 16px;
 }
 
-.about__card .button__about{
+.about__card .button__about {
     margin-top: 55px;
     background-color: var(--main-color);
     color: var(--background-color);
@@ -37,42 +33,51 @@
     padding: 8px 25px;
 }
 
-.check-icon{
+.check-icon {
     color: green;
     font-size: 45px;
 }
 
-ul li p{
+ul li p {
     font-size: 15px;
 }
-@media screen and (max-width: 1400px){
-    .about__header h1{
+
+@media screen and (max-width: 1400px) {
+    .about__header h1 {
         font-size: 36px;
     }
 
-    ul li p{
+    .about {
+        padding: 135px 0;
+    }
+
+    ul li p {
         font-size: 14px;
     }
 
-    .about__card{
+    .about__card {
         width: 330px;
         height: 350px;
         padding: 25px;
 
     }
 
-    .about__card .button__about{
+    .about__card .button__about {
         margin-top: 35px;
     }
-    
+
 }
 
-@media screen and (max-width: 1200px){
-    .about__header h1{
+@media screen and (max-width: 1200px) {
+    .about {
+        padding: 110px 0;
+    }
+
+    .about__header h1 {
         font-size: 30px;
     }
 
-    .about__card{
+    .about__card {
         width: 310px;
         height: 330px;
         padding: 20px;
@@ -80,59 +85,59 @@ ul li p{
         font-size: 16px;
     }
 
-    .about__card .button__about{
+    .about__card .button__about {
         margin-top: 15px;
     }
 }
 
-@media screen and (max-width: 992px){
-    .about__header h1{
+@media screen and (max-width: 992px) {
+    .about {
+        padding: 75px 0;
+    }
+
+    .about__header h1 {
         font-size: 28px;
     }
 
-    .about__content{
-        padding-top: 60px;
-    }
-
-    .check-icon{
+    .check-icon {
         font-size: 35px;
     }
 
-    .about__card{
+    .about__card {
         width: 500px;
         height: 250px;
         text-align: center;
     }
 }
 
-@media screen and (max-width: 768px){
-    .about__header h1{
+@media screen and (max-width: 768px) {
+    .about__header h1 {
         font-size: 24px;
     }
-    .about__content{
-        padding-top: 55px;
-    }
 
-    ul li p{
+    ul li p {
         font-size: 13px;
     }
 
-    .check-icon{
+    .check-icon {
         font-size: 30px;
     }
 }
 
-@media screen and (max-width: 576px){
-    .about__header h1{
+@media screen and (max-width: 576px) {
+    .about {
+        padding: 35px 0;
+    }
+
+    .about__header h1 {
         font-size: 18px;
     }
-    ul li p{
+
+    ul li p {
         font-size: 13px;
     }
-    .about__content{
-        padding-top: 40px;
-    }
-    .about__card{
+
+    .about__card {
         width: 400px;
         height: 230px;
         padding: 15px;
@@ -141,11 +146,9 @@ ul li p{
         text-align: center;
     }
 
-    .about__card .button__about{
+    .about__card .button__about {
         margin-top: 25px;
         padding: 5px 15px;
         font-size: 13px;
     }
 }
-
-
