[images] change images format

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,5 @@
 .about {
-    background-image: url('../assets/images/background/bg_about.png');
+    background-image: url('../assets/images/background/bg_about.webp');
     background-size: cover;
     background-repeat: no-repeat;
     padding: 155px 0;
