--- a/src/styles/ourteam.css
+++ b/src/styles/ourteam.css
@@ -1,12 +1,12 @@
 .our-team {
     position: relative;
-    background-image: url('../assets/images/background/our-team.png');
+    background-image: url('../assets/images/background/our-team.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
     padding: 100px 0;
   }
-  
+
   .container {
     position: relative;
     z-index: 1; /* Ensure the content appears above the overlay */
@@ -162,253 +162,3 @@
         padding: 45px 0;
       }
 }
-
-.frame {
-    background-color: #f2f2f2;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .frame .overlap-group-wrapper {
-    background-color: #f2f2f2;
-    height: 1080px;
-    overflow: hidden;
-    width: 1920px;
-  }
-  
-  .frame .overlap-group {
-    height: 1124px;
-    left: -24px;
-    position: relative;
-    width: 1972px;
-  }
-  
-  .frame .BARBEL {
-    height: 1080px;
-    left: 24px;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    width: 1920px;
-  }
-  
-  .frame .rectangle {
-    background-color: #0000007d;
-    height: 1124px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 1972px;
-  }
-  
-  .frame .text-wrapper {
-    color: #ffffff;
-    font-family: "Poppins-Bold", Helvetica;
-    font-size: 50px;
-    font-weight: 700;
-    left: 701px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 119px;
-  }
-  
-  .frame .div {
-    background-color: #f2f2f2;
-    border-radius: 35px;
-    box-shadow: 4px 4px 7.5px #00000040;
-    height: 671px;
-    left: 781px;
-    position: absolute;
-    top: 288px;
-    width: 410px;
-  }
-  
-  .frame .rectangle-2 {
-    background-color: #f2f2f2;
-    border-radius: 35px;
-    box-shadow: 4px 4px 7.5px #00000040;
-    height: 671px;
-    position: relative;
-    width: 410px;
-  }
-  
-  .frame .mask-group {
-    height: 346px;
-    left: 813px;
-    position: absolute;
-    top: 316px;
-    width: 346px;
-  }
-  
-  .frame .img {
-    height: 346px;
-    left: 339px;
-    position: absolute;
-    top: 316px;
-    width: 346px;
-  }
-  
-  .frame .rectangle-3 {
-    background-color: #eae939;
-    border-radius: 28.5px 28.5px 35px 35px;
-    box-shadow: 0px 4px 7.5px #00000033;
-    height: 64px;
-    left: 813px;
-    position: absolute;
-    top: 681px;
-    width: 346px;
-  }
-  
-  .frame .rectangle-4 {
-    background-color: #eae939;
-    border-radius: 28.5px 28.5px 35px 35px;
-    box-shadow: 0px 4px 7.5px #00000033;
-    height: 64px;
-    left: 339px;
-    position: absolute;
-    top: 681px;
-    width: 346px;
-  }
-  
-  .frame .text-wrapper-2 {
-    color: #000000;
-    font-family: "Poppins-SemiBold", Helvetica;
-    font-size: 18px;
-    font-weight: 600;
-    left: 949px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 685px;
-  }
-  
-  .frame .text-wrapper-3 {
-    color: #000000;
-    font-family: "Poppins-SemiBold", Helvetica;
-    font-size: 18px;
-    font-weight: 600;
-    left: 456px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 685px;
-  }
-  
-  .frame .director-functional {
-    color: #000000;
-    font-family: "Poppins-Regular", Helvetica;
-    font-size: 16px;
-    font-weight: 400;
-    left: 865px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 709px;
-  }
-  
-  .frame .commisioner-head {
-    color: #000000;
-    font-family: "Poppins-Regular", Helvetica;
-    font-size: 16px;
-    font-weight: 400;
-    left: 398px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 709px;
-  }
-  
-  .frame .bachelor-of-arts-in {
-    color: #000000;
-    font-family: "Poppins-Medium", Helvetica;
-    font-size: 16px;
-    font-weight: 500;
-    left: 813px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 768px;
-  }
-  
-  .frame .bachelor-of-sport {
-    color: #000000;
-    font-family: "Poppins-Medium", Helvetica;
-    font-size: 16px;
-    font-weight: 500;
-    left: 339px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 768px;
-  }
-  
-  .frame .rectangle-5 {
-    background-color: #f2f2f2;
-    border-radius: 35px;
-    box-shadow: 4px 4px 7.5px #00000040;
-    height: 671px;
-    left: 1255px;
-    position: absolute;
-    top: 288px;
-    width: 410px;
-  }
-  
-  .frame .mask-group-2 {
-    height: 346px;
-    left: 1287px;
-    position: absolute;
-    top: 316px;
-    width: 346px;
-  }
-  
-  .frame .rectangle-6 {
-    background-color: #eae939;
-    border-radius: 28.5px 28.5px 35px 35px;
-    box-shadow: 0px 4px 7.5px #00000033;
-    height: 64px;
-    left: 1287px;
-    position: absolute;
-    top: 681px;
-    width: 346px;
-  }
-  
-  .frame .text-wrapper-4 {
-    color: #000000;
-    font-family: "Poppins-SemiBold", Helvetica;
-    font-size: 18px;
-    font-weight: 600;
-    left: 1400px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 685px;
-  }
-  
-  .frame .social-media {
-    color: #000000;
-    font-family: "Poppins-Regular", Helvetica;
-    font-size: 16px;
-    font-weight: 400;
-    left: 1339px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 709px;
-  }
-  
-  .frame .social-media-2 {
-    color: #000000;
-    font-family: "Poppins-Medium", Helvetica;
-    font-size: 16px;
-    font-weight: 500;
-    left: 1287px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 768px;
-  }
