--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,10 @@
 .footer{
     padding: 65px 0;
-    background-color: var(--main-color);
+    background-image: url('../assets/images/background/bg_footer.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    position: relative;
 }
 
 .footer__header h1{
@@ -26,7 +30,11 @@
 }
 
 .footer__content ul li  {
-   margin-top: 5px;
+   margin-top: 12px;
+   display: flex;
+   align-items: center;
+   gap: 7px;
+   cursor: pointer;
 }
 
 .footer__content ul li span {
@@ -35,7 +43,9 @@
 }
 
 @media screen and (max-width: 1400px){
-    
+    .footer__header h1{
+        margin-bottom: 80px;
+    }
 }
 
 @media screen and (max-width: 1200px){
@@ -62,5 +72,13 @@
 @media screen and (max-width: 576px){
     .footer{
         padding: 45px 0;
+    }
+
+    .footer__header h1{
+        margin-bottom: 55px;
+    }
+
+    .footer__content h5{
+        margin-top: 15px;
     }
 }
