--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -23,12 +23,9 @@
 }
 
 .about__card .button__about {
-    margin-top: 55px;
-    background-color: var(--main-color);
-    color: var(--background-color);
+    color: var(--main-color);
     font-style: italic;
-    border-radius: 30px;
-    padding: 8px 25px;
+    font-weight: 600;
 }
 
 .check-icon {
@@ -58,8 +55,6 @@ ul li p {
     }
 
     .about__card {
-        width: 330px;
-        height: 350px;
         padding: 25px;
 
     }
@@ -80,8 +75,6 @@ ul li p {
     }
 
     .about__card {
-        width: 310px;
-        height: 330px;
         padding: 20px;
         line-height: 27px;
         font-size: 16px;
@@ -106,8 +99,6 @@ ul li p {
     }
 
     .about__card {
-        width: 500px;
-        height: 250px;
         text-align: center;
     }
 }
@@ -140,8 +131,6 @@ ul li p {
     }
 
     .about__card {
-        width: 400px;
-        height: 230px;
         padding: 15px;
         line-height: 22px;
         font-size: 13px;
