--- a/src/styles/productservice.css
+++ b/src/styles/productservice.css
@@ -84,7 +84,7 @@
         display: flex;
         gap: 0px;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
     }
 
     .content__body ul{
