--- a/src/styles/ourclient.css
+++ b/src/styles/ourclient.css
@@ -32,13 +32,17 @@
   }
 
   .swiper-slide img {
-    max-width: 100%; /* Ensure images don't exceed container */
-    height: auto; /* Maintain aspect ratio */
+    display: block; 
+    width: 100%;
   }
 
   .our-client__slider{
     width: 100%;
     height: 100%;
+  }
+
+  .swipper-wrapper{
+    overflow: hidden !important;
   }
 
 
@@ -47,14 +51,6 @@
       padding: 65px 0;
     }
   }
-
-  @media screen and (max-width: 576px){
-    .swiper-slide {
-      max-width: 300px; /* Adjust the value as needed */
-      overflow-x: hidden !important;
-  }
-  }
-  
 
   @media screen and (max-width: 992px) {
     .our-client__slider{
@@ -74,6 +70,18 @@
     .our-client {
       padding-top: 50px;
       padding-bottom: 130px
+    }
+  }
+
+  @media screen and (max-width: 576px){
+    .our-client__slider{
+      width: 100%;
+      height: auto;
+    }
+
+    .our-client {
+      padding-top: 50px;
+      padding-bottom: 50px
     }
   }
 
